# jarvis-registry

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  NOTICE  README.md  SECURITY.md  docker-compose.no-db.yml  docker-compose.override.yml.example  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  tartufo.toml
.github/: copilot-instructions.md  release-notes-instructions.md
.github/instructions/: registry-gateway.instructions.md
.github/prompts/: registry.prompt.md
.github/skills/local-frontend-check/: SKILL.md
.github/workflows/: build-images-reusable.yaml  create_release.yaml  deploy.yaml  docs.yml  gitnexus-index.yml  lint.yml  release_changelog.yaml  tag_build_images.yaml  tag_build_images_acr.yml  test.yml
.github/workflows/config/: applications.json
.github/workflows/utils/: generate_k8s_registry_env.py  update_changelog.py
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
FEATURES/: index.html
LICENSE/: index.html
NOTICE/: index.html
SECURITY/: index.html
a2a-agent-management/: index.html
anthropic-registry-import/: index.html
anthropic_registry_api/: index.html
api/: registry_client.py
api-reference/: index.html
archived/auth-backup/: index.html
archived/auth-legacy/: index.html
auth/: index.html
auth-server/: cognito_utils.py  pyproject.toml  pytest.ini
auth-server/src/auth_server/: container.py  deps.py  oauth2_providers.yml  server.py
auth-server/tests/: conftest.py
auth-server/tests/integration/: conftest.py  test_downstream_well_known.py  test_oauth_callback_token_flow.py  test_oauth_flow_routes.py  test_oauth_scoping_and_rotation.py  test_root_level_routes.py  test_well_known_routes.py
changelog/: index.html
changelog/asc0.2.12/: index.html
changelog/asc0.3.1/: index.html
changelog/asc0.5.1/: index.html
changelog/asc0.5.2/: index.html
cli/: index.html
cognito/: index.html
complete-setup-guide/: index.html
config/: otel-collector-config.yaml
configuration/: index.html
deployment-guide/: index.html
design/a2a-agent-api-design/: index.html
design/acl-connector-service/: index.html
design/agent-workflow/: index.html
design/agentcore/: index.html
design/entra-id-implementation/: index.html
design/federation/: index.html
design/federation-api/: index.html
design/mcp_db_persistence_design/: index.html
design/scopes/: index.html
design/search-route/: index.html
design/security-design/: index.html
design/workflow-api-design/: index.html
docker/: Dockerfile.auth  Dockerfile.registry-frontend  registry-entrypoint.sh
docs/: CNAME  FEATURES.md  a2a-agent-api-design.md  acl-connector-service.md  configuration.md  deployment-guide.md  embeddings.md  entra-id-setup.md  faq.md  federation-api.md  frontend-testing.md  generate-secrets.md  index.md  llms.txt  macos-setup-guide.md  mcp_db_persistence_design.md  quick-start.md
docs/changelog/: asc0.2.12.md  asc0.3.1.md  asc0.5.1.md  asc0.5.2.md  index.md
docs/design/: a2a-agent-api-design.md  agent-workflow.md  federation-api.md  mcp_db_persistence_design.md  scopes.md  search-route.md  security-design.md  workflow-api-design.md
docs/explore-agentic/: index.md
docs/features/: a2a-registry.md  agentcore-federation.md  auth-server.md  foundry-ai-federation.md  idp-integration.md  mcp-registry.md  observability.md  registry-endpoint.md
docs/stylesheets/: extra.css
docs/tech-references/: proxy-correctness.md
dynamic-tool-discovery/: index.html
embeddings/: index.html
entra-id-setup/: index.html
explore-agentic/: index.html
explore-agentic/comparisons/: index.html
explore-agentic/glossary/: index.html
explore-agentic/pillars/: index.html
explore-agentic/playbooks/: index.html
faq/: index.html
features/a2a-registry/: index.html
features/agentcore-federation/: index.html
features/auth-server/: index.html
features/foundry-ai-federation/: index.html
features/mcp-registry/: index.html
features/observability/: index.html
features/registry-endpoint/: index.html
frontend/: biome.json  index.html  nginx_http_and_https.conf  nginx_http_only.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  workflow-api-design.md
frontend-testing/: index.html
frontend/src/: App.tsx  config.ts  index.css  routes.ts
generate-secrets/: index.html
in-session-re-auth/: index.html
installation/: index.html
jwt-token-vending/: index.html
keycloak-integration/: index.html
macos-setup-guide/: index.html
overrides/partials/: logo.html
podman-apple-silicon/: index.html
prebuilt-images/: index.html
quick-start/: index.html
registry/: pyproject.toml
registry-auth-architecture/: index.html
registry-auth-detailed/: index.html
registry-pkgs/: .env.example  README.md  pyproject.toml
registry-pkgs/tests/: conftest.py
registry/tests/: conftest.py
registry_api/: index.html
scan_report_example/: index.html
scripts/: azure_foundry_execute.py  azure_foundry_sync.py  backfill_acl_roleid.py  bedrock_model.py  download_beanie_models.py  e2e_media_echo.py  federation_job_admin.py  generate_jwt_keys.py  import_schemas.py  local_a2a_test_server.py  migrate_a2a_agent_path_slug.py  migrate_encrypt_oauth_client_secrets.py  migrate_encrypt_oauth_tokens.py  purge_workflow_data.py  reset_federation_resources.py  run_workflow_by_id.py  run_workflow_pool_a2a.py  save_workflow_definition.py  seed_access_roles.py  seed_access_roles_standalone.py  seed_mongodb.py  sync_mongo_to_weaviate.py  test_agent_direct.py  test_control_e2e.py  test_device_flow.py  test_invoke_agent.py  test_mcp_direct.py  validate_step_output.py  vector_sync.py  verify_workflow_control_e2e.py  verify_workflow_live_mcp_a2a_e2e.py
search/: search_index.json
security-scanner/: index.html
servers/currenttime/: pyproject.toml
servers/mcpgw/: pyproject.toml
service-management/: index.html
tech-references/proxy-correctness/: index.html
testing/: index.html
token-refresh-service/: index.html
(+511 files in other folders)
